--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "nuevoepisodio_bot",
-  "version": "1.0.0",
+  "version": "2.0.1",
   "description": "Bot de Telegram que notifica nuevos episodios",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "NODE_PATH=./dist node dist/app.js",
+    "build:start": "npm run build && npm start",
+    "lint": "eslint --ext .js,.ts ."
   },
   "repository": {
     "type": "git",
@@ -16,11 +20,30 @@
     "url": "https://github.com/roicou/nuevoepisodio_bot/issues"
   },
   "homepage": "https://github.com/roicou/nuevoepisodio_bot#readme",
+  "devDependencies": {
+    "@types/luxon": "^3.0.2",
+    "@types/node": "^17.0.18",
+    "@types/node-cron": "^3.0.4",
+    "tsc-alias": "^1.7.0",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.8.4",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.4.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "prettier": "^2.7.1",
+    "@typescript-eslint/parser": "^5.41.0",
+    "@typescript-eslint/eslint-plugin": "^5.41.0"
+  },
   "dependencies": {
-    "axios": "^0.26.0",
-    "moment": "^2.29.1",
-    "mongodb": "^4.4.1",
-    "node-cron": "^3.0.0",
-    "telegraf": "^4.7.0"
+    "dotenv": "^16.0.3",
+    "luxon": "^3.0.4",
+    "mongoose": "^6.7.0",
+    "node-cron": "^3.0.2",
+    "telegraf": "^4.10.0",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
