preparada primera versión en TS

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 TELEGRAM_TOKEN='<YOUR TOKEN HERE>'
 TELEGRAM_TOKEN_DEBUG='<YOUR TOKEN HERE>'
+TELEGRAM_TEST_GROUP_ID='<GROUP_ID>'
 
 # retryWrites=true&w=majority IS REQUIRED FOR MONGODB ATLAS
 MONGODB_URI='mongodb+srv://example.com/databasename?retryWrites=true&w=majority'
@@ -10,3 +11,5 @@ TMDB_URL='https://api.themoviedb.org/3'
 TMDB_API_KEY='<YOUR API KEY HERE>'
 
 DEBUG="false"
+
+TIMEZONE="Europe/Madrid"
