--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_PATH=./dist node dist/app.js",
     "build:start": "npm run build && npm start",
+    "optimize-users": "npm run build && NODE_PATH=./dist node dist/scripts/optimize-users.js",
     "lint": "eslint --ext .js,.ts ."
   },
   "repository": {
@@ -21,12 +22,13 @@
   },
   "homepage": "https://github.com/roicou/nuevoepisodio_bot#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.187",
     "@types/luxon": "^3.0.2",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.18",
     "@types/node-cron": "^3.0.4",
-    "tsc-alias": "^1.7.0",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.8.4",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -34,11 +36,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^2.7.1",
-    "@typescript-eslint/parser": "^5.41.0",
-    "@typescript-eslint/eslint-plugin": "^5.41.0"
+    "tsc-alias": "^1.7.0",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
+    "lodash": "^4.17.21",
     "luxon": "^3.0.4",
     "mongoose": "^6.7.0",
     "node-cron": "^3.0.2",
