debug database supported

--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,7 @@ TELEGRAM_TEST_GROUP_ID='<GROUP_ID>'
 
 # retryWrites=true&w=majority IS REQUIRED FOR MONGODB ATLAS
 MONGODB_URI='mongodb+srv://example.com/databasename?retryWrites=true&w=majority'
+MONGODB_URI_TEST='mongodb+srv://example.com/databasename_test?retryWrites=true&w=majority'
 MONGODB_USER='username'
 MONGODB_PASSWORD='password'
 
