/admin command to send message as admin added

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 TELEGRAM_TOKEN='<YOUR TOKEN HERE>'
 TELEGRAM_TOKEN_DEBUG='<YOUR TOKEN HERE>'
 TELEGRAM_TEST_GROUP_ID='<GROUP_ID>'
+TELEGRAM_ADMIN_ID='<ADMIN-ID>,<ADMIN-ID2>'
 
 # retryWrites=true&w=majority IS REQUIRED FOR MONGODB ATLAS
 MONGODB_URI='mongodb+srv://example.com/databasename?retryWrites=true&w=majority'
